# sonar

./: plot.gp  readme.md  sonar.html
doc/: SONAR PROCEEDINGS.doc  SONAR PROCEEDINGS.odt
programy/C/ix86/: test.c
programy/C/ix86/SID/: AUTHORS  Doxyfile  README  configure  configure.in  sidd  sidd.c  sidd.kdevelop  sidd.kdevelop.pcs  sidd.kdevses
programy/C/ix86/SID/autom4te.cache/: output.0  output.1  traces.0  traces.1
programy/C/ix86/SID/debug/: Makefile  config.h  config.status  libtool
programy/C/ix86/SID/debug/src/: Makefile  sidd
programy/C/ix86/SID/debug/src/.deps/: sidd.Plo  sidd.Po
programy/C/ix86/SID/scripts/: nplot2  specplot
programy/C/ix86/SID/src/: Makefile.am  Makefile.in  sidd.c  sidd.conf
programy/C/ix86/SID/templates/: h
programy/C/ix86/cykly/: cykly.c
programy/C/ix86/hello/: hello.c
programy/C/ix86/nahoda/: nahoda.c
programy/C/ix86/nejvetsi/: nejvetsi.c
programy/C/ix86/opis/: opis.c
programy/C/ix86/pismena/: pismena.c
programy/C/ix86/pole/: pole  pole.c  pole.pnproj
programy/C/ix86/rovnice/: rovnice.c
programy/C/ix86/signals/alsa/sonar/: sonar.c  sonar.html
programy/C/ix86/test/test/src/: CMakeLists.txt  test.c  test.h  testtest.c
programy/C/ix86/test/test/templates/: c
programy/C/ix86/tisk/: tisk.c
programy/C/ix86/vypocet_ploch/: obsah_obvod.c  vypocet  vypocty.h
